# Smart-City-Real-time-public-transport-Delays---project

./: .gitignore  README.md  pyproject.toml
analysis/: notebook.ipynb
ingestion/: ingestion.py
scripts/: bronze_to_silver.py  gold_active_fleet.py  gold_delayed_by_traffic.py  gold_speed_anomalies.py  gold_stop_congestion.py
terraform/: main.tf  variables.tf
