[project]
name = "public-transport-delay-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.45",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.optional-dependencies]
spark = [
    "pyspark==3.5.8",
]
